@@ -1,3 +1,7 @@
+Fri Jul 11 20:47:56 2003  Holger Bochnig <hbgg@gmx.net>
+
+	* external.c: ignore SIGPIPE on Windows
+
 Fri Jul 11 19:29:11 2003  Holger Bochnig <hbgg@gmx.net>
 
 	trying to use sockets on Windows (SIGPIPE still missing)
